add try-catch statements, and logging

--- a/MediaManager.API/appsettings.Development.json
+++ b/MediaManager.API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "MediaManager.API.Controllers": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   }
