implement VolumesController POST, dbcontext

--- a/MediaManager.API/appsettings.Development.json
+++ b/MediaManager.API/appsettings.Development.json
@@ -5,5 +5,8 @@
       "MediaManager.API.Controllers": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MediaManagerConnectionString": "server=(LocalDb)\\MSSQLLocalDB;Database=MediaManagerDb;Integrated Security=True;MultipleActiveResultSets=true"
   }
 }
