Updates for config settings

--- a/MediaManager.API/appsettings.json
+++ b/MediaManager.API/appsettings.json
@@ -2,8 +2,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "MediaManager.API.Controllers": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "SecretForKey": "",
+    "Issuer": "",
+    "Audience": ""
+  }
 }
