--- a/MediaManager.API/appsettings.json
+++ b/MediaManager.API/appsettings.json
@@ -6,6 +6,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MediaManagerConnectionString": ""
+  },
   "AllowedHosts": "*",
   "Authentication": {
     "SecretForKey": "",
